cmake_minimum_required(VERSION 3.8)
set(TARGET "UncalibratedPSPcl")
project(${TARGET})
# required packages
find_package(OpenCV REQUIRED)
find_package(PCL REQUIRED)
file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/inc/*.h)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/inc)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(${TARGET} ${SOURCES})
target_link_libraries (${TARGET} ${PCL_LIBRARIES})
target_link_libraries(${TARGET} ${OpenCV_LIBS})